[gd_scene load_steps=6 format=2]

[ext_resource path="res://FontData.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1288.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "Hell Girl"
align = 1
valign = 1

[node name="Mention" type="Label" parent="."]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 726.0
custom_fonts/font = SubResource( 1 )
text = "Play on fullscreen for a better experience"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="." instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 320.0
margin_right = 680.0
margin_bottom = 400.0
text = "START GAME"

[node name="Quit" parent="." instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 408.0
margin_right = 680.0
margin_bottom = 488.0
text = "LEAVE GAME"

[node name="FullScreen" parent="." instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 496.0
margin_right = 680.0
margin_bottom = 576.0
text = "FULL SCREEN"
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
